[package]
name = "serpent_control"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"

eframe = "0.24"
egui_extras = "0.24"
egui_tiles = "0.4"
rfd = "0.12"

windows = { version = "0.52", features = [
    "Wdk_System_Threading",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
] }
serpent_control_backend = { path = "../control_backend" }
